# Asset-Management-system

./: Dockerfile  README.md  docker-compose.yml  main.py  models.py  pyproject.toml
app/: database.py  main.py  models.py  schemas.py
app/routers/: ai_analyze.py  ingest.py
app/services/: ai_enrichment.py  ai_service.py
migrations/: 001_add_subdomain_to_ip_address_relationship.sql
